# CLERNet

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/custom_dataset/blocksworld/: dizionario  dizionario_goal
data/custom_dataset/depots/: dizionario_goal
data/custom_dataset/driverlog/: dizionario_goal
data/custom_dataset/logistics/: dizionario_goal
data/custom_dataset/satellite/: dizionario_goal
data/custom_dataset/zenotravel/: dizionario_goal
data/params_optuna/blocksworld/: blocksworld_params.json
data/params_optuna/depots/: depots_params.json
data/params_optuna/driverlog/: driverlog_params.json
data/params_optuna/logistics/: logistics_params.json
data/params_optuna/satellite/: satellite_params.json
data/params_optuna/zenotravel/: zenotravel_params.json
data/training_data/blocksworld/example_raw_training_data/: p000004_1.SOL_1.SOL  p000012_1.SOL_1.SOL  p000054_1.SOL_1.SOL  p000063_4.SOL_1.SOL  p000074_3.SOL_1.SOL  p000086_1.SOL_1.SOL  p000093_2.SOL_1.SOL  p000103_3.SOL_1.SOL  p000112_1.SOL_1.SOL  p000112_2.SOL_1.SOL
src/: Aggregation-Selection.ipynb  CLERNet_exec.ipynb  GRNetTD_approach.ipynb  constants.py  post_processing.ipynb  simplify_goal_rec_datasets.py  utils.py
src/cli/: test_model.py
src/data/: action.py  dataset.py  plan.py  plan_generator.py
src/models/: architecture.py  attention.py  loss.py  params_generator.py
src/training/: train.py
